--- a/Radius_4.ipynb
+++ b/Radius_4.ipynb
@@ -47,12 +47,12 @@
     "\n",
     "p is the spectral index. \n",
     "\n",
-    "This implies that more electrons will have lower frequencies. The synchrotron spectrum is directly related to the power law distribution of the electrons. Hence we expect to see an incline of the spectrum at lower frequencies. Following is a graph representing the power law. The spectrum has a similar behavior which will be explained later on."
+    "This implies that more electrons will have lower frequencies. The synchrotron spectrum is directly related to the power law distribution of the electrons. Hence we expect to see a decline of the intensity at lower frequencies. Following is a graph representing the power law. The spectrum has a similar behavior which will be explained later on."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "32492b24",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "0f5247c3",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "54aa4e3a",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
    "id": "4fa4c8ae",
    "metadata": {},
    "source": [
-    "What defines the frequency, denoted as $\\nu_1$, at which the optical depth is equal to unity?"
+    "What then defines the frequency, denoted as $\\nu_1$, at which the optical depth is equal to unity?"
    ]
   },
   {
@@ -161,7 +161,11 @@
    "id": "6f39cd0d",
    "metadata": {},
    "source": [
-    "To summarize up to now, the expected intensity spectrum from a self absorbed synchrotron radiation should have a regime of low frequencies, where the intensity is proportional to the frequency to the power of 5/2. A turn over frequency $\\nu_1$ from where the intensity is proportional to the frequency to the power of the spectral index."
+    "To summarize up to now, the expected intensity spectrum from a self absorbed synchrotron radiation should have:\n",
+    "\n",
+    "A regime of low frequencies, where the intensity inclines and is proportional to the frequency to the power of 5/2. \n",
+    "\n",
+    "A turn over frequency $\\nu_1$ from where the intensity declines and is proportional to the frequency to the power of the spectral index."
    ]
   },
   {
@@ -298,7 +302,7 @@
     "\n",
     "B has to do with the material blown off from the progenitor star and other parameters. \n",
     "\n",
-    "P has to do with the power law distribution of energetic electrons."
+    "p has to do with the power law distribution of energetic electrons."
    ]
   },
   {
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "4df4558f",
    "metadata": {},
    "outputs": [],
@@ -331,8 +335,11 @@
     "mJy = 1e-3 * 1e-23 #cgs\n",
     "Mpc = 3.086 * 1e24 #cm\n",
     "\n",
-    "#Observable data in tables 1&2. The number in the first column is the time, in days, after the explosion.\n",
-    "#The following values in the row are the flux density measured at different frequencies during that epoch.\n",
+    "\"\"\"\n",
+    "Observable data in tables 1&2. \n",
+    "Each row is an observation epoch. The number in the first column is the time, in days, after the explosion.\n",
+    "The following values in the row are the flux density measured at different frequencies during a single epoch.\n",
+    "\"\"\"\n",
     "data_table = np.array([\n",
     "    [16.4, np.nan, np.nan, np.nan, np.nan, 2.430, 4.090, 5.535, 6.970, 6.790, 6.500, 5.130, 4.600, 3.470],\n",
     "    [20.4, np.nan, np.nan, 0.540, 1.400, 3.150, 4.800, 5.870, 5.940, 5.313, 4.560, 3.610, 3.117, 2.190],\n",
@@ -386,7 +393,7 @@
    "id": "3c5e9417",
    "metadata": {},
    "source": [
-    "In the following Flux function a very small number is added to z in order to avoid it from being zero in the process of the fiting.\n",
+    "In the following Flux function a very small number is added to z in order to avoid it from being zero in the process of the fitting.\n",
     "There is an additional 1.58 factor in order to normalize the $J$ function to unity when at maximum."
    ]
   },
@@ -571,7 +578,7 @@
     "\n",
     "It is important to note that $F\\nu_1$ isn't necessarly the maximum Flux. However, one can find this value once $\\nu_1$ is found - it is the flux at which $\\nu=\\nu_1$.\n",
     "\n",
-    "Trying to fit all three parameters ($F(\\nu_1), \\nu_1, p$) at once isn't straightforward. One method to do the fitting is by seting p to a specific value and only fiting $F(\\nu_1)$ and $\\nu_1$ to the curve.\n",
+    "Trying to fit all three parameters ($F(\\nu_1), \\nu_1, p$) at once isn't straightforward. One method to do the fitting is by seting p to a specific value and only fitting $F(\\nu_1)$ and $\\nu_1$ to the curve.\n",
     "\n",
     "As mentioned above:\n",
     "\n",
@@ -901,7 +908,7 @@
     "\n",
     "Including the spectral index p to the fitting process, such that it will fit all three parameters at once, doesn't result with fine enough results. \n",
     "Therefor I set p=2.8.\n",
-    "Ideally, I should run the fit process for different values of p in order to find which p gives the best fit. Alternatively, it is possible to iterate between p and the other two parameters. However, it seems from other articles that p is mostly in the range of 3 and that small deviation of it's value doesn't affect $\\nu1$ drastically.\n",
+    "Ideally, I should run the fit process for different values of p in order to find which p gives the best fit. Alternatively, it is possible to iterate between p and the other two parameters. However, it seems from other articles that p is typically in the range of 3 and that small deviation of its value doesn't affect $\\nu1$ drastically.\n",
     "\n"
    ]
   },
