--- a/Radius_4.ipynb
+++ b/Radius_4.ipynb
@@ -5,7 +5,7 @@
    "id": "fb852946",
    "metadata": {},
    "source": [
-    "# Calculating the Radius and Magnetic field of a supernova shockwave from the spectrum of a single epoch"
+    "# Calculating the Radius of a supernova shockwave from the spectrum of a single epoch"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "c74dccaa",
    "metadata": {},
    "source": [
-    "In order to calculate the Radius and Magnetic field of the shockwave of a supernova, I will assume the following mechanism:\n",
+    "In order to calculate the Radius of the shockwave of a supernova, I will assume the following mechanism:\n",
     "\n",
     "In the last stages of a star's life, material from the star begins to blow out into the circumsterllar medium (CSM) such that the CSM includes mass and magentic fields.\n",
     "\n",
