--- a/Radius_4.ipynb
+++ b/Radius_4.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "The interaction of the shockwave with the CSM causes electrons to travel at relativistic speeds. The shockwave itself has a lower velocity on the scale of thousands of kilometer per second, however the electrons can accelerate to relativistic speeds due to Fermi acceleration.\n",
     "\n",
-    "When the relativistic electrons interact with a magnetic field they spiral due to the lorentz force. The lorentz force accelerates the elctrons. Accelerated electron produce radiation. This type of radiation is called synchrotron radiation."
+    "When the relativistic electrons interact with a magnetic field they spiral due to the lorentz force. The lorentz force accelerates the elctrons. Accelerated electrons produce radiation. This type of radiation is called synchrotron radiation."
    ]
   },
   {
@@ -41,13 +41,13 @@
    "id": "217f449a",
    "metadata": {},
    "source": [
-    "The amount of particles accelerated by the shockwave follow a power law energy distribution $N(E)=N_0 E^{-p}$.\n",
+    "The amount of electrons which reach relativistic speeds due to the shockwave, follow a power law energy distribution $N(E)=N_0 E^{-p}$.\n",
     "\n",
     "Where N(E) is the density of particles with energy E. \n",
     "\n",
     "p is the spectral index. \n",
     "\n",
-    "This implies that more electrons will have lower frequencies. The synchrotron spectrum is directly related to the power law distribution of the electrons. Hence we expect to see a decline of the intensity at lower frequencies. Following is a graph representing the power law. The spectrum has a similar behavior which will be explained later on."
+    "This implies that more electrons will have lower frequencies. The synchrotron spectrum is directly related to the power law distribution of the electrons. Hence we expect to see a decline of the intensity at higher frequencies. Following is a graph representing the power law. The spectrum has a similar behavior, at higher frequencies, which will be explained later on."
    ]
   },
   {
