--- a/Radius_4.ipynb
+++ b/Radius_4.ipynb
@@ -125,7 +125,7 @@
    "id": "c3b13d67",
    "metadata": {},
    "source": [
-    "However, when there is a high density of particles with relativistic speeds in the vicinity of the emitted synchrotron radiation, these particles absorb the radiation. In order for the particles to absorb the radiation, their energy needs to match that of the radiation. This phenomena of self absorption is dominate in lower frequencies where there is a larger density of electrons with lower energy due to the power law distribution. Hence, if you look at the spectrum from high frequencies towards the lower ones then the intensity of radiation will begin to decrease at a certain frequency - instead of increasing. This frequency where the turn over occurs is the frequency where the optical depth is equal to unity. Frequencies lower than it are absorbed and less radiation is emitted towards us hence these frequencies are more opaque (optically thick). Frequencies above are less abosrobed and are emitted to us hence these frequencies are transparent (optically thin).\n",
+    "However, when there is a high density of particles with relativistic speeds in the vicinity of the emitted synchrotron radiation, these particles absorb the radiation. In order for the particles to absorb the radiation, their energy needs to match that of the radiation. This phenomena of self absorption is dominate in lower frequencies where there is a larger density of electrons with lower energy due to the power law distribution. Hence, if you look at the spectrum from high frequencies towards the lower ones then the intensity of radiation will begin to decrease at a certain frequency - instead of increasing. This frequency where the turn over occurs is the frequency where the optical depth is equal to unity. Frequencies lower than it are absorbed and less radiation is emitted towards us hence these frequencies are more opaque (optically thick). Frequencies above this turn over frequency, are less abosrobed and are emitted to us hence these frequencies are transparent (optically thin).\n",
     "\n",
     "The relationship between frequency and radiation in the thick optical specturm is:\n",
     "\n",
@@ -137,7 +137,7 @@
    "id": "4fa4c8ae",
    "metadata": {},
    "source": [
-    "What then defines the frequency, denoted as $\\nu_1$, at which the optical depth is equal to unity?"
+    "What then defines the turn over frequency, denoted as $\\nu_1$, at which the optical depth is equal to unity?"
    ]
   },
   {
@@ -163,9 +163,9 @@
    "source": [
     "To summarize up to now, the expected intensity spectrum from a self absorbed synchrotron radiation should have:\n",
     "\n",
-    "A regime of low frequencies, where the intensity inclines and is proportional to the frequency to the power of 5/2. \n",
+    " - A regime of low frequencies, where the intensity inclines and is proportional to the frequency to the power of 5/2. \n",
     "\n",
-    "A turn over frequency $\\nu_1$ from where the intensity declines and is proportional to the frequency to the power of the spectral index."
+    " - A turn over frequency $\\nu_1$ from where the intensity declines and is proportional to the frequency to the power of the spectral index."
    ]
   },
   {
