--- a/Radius_4.ipynb
+++ b/Radius_4.ipynb
@@ -307,6 +307,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e15c6184",
+   "metadata": {},
+   "source": [
+    "### Time independence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaf68837",
+   "metadata": {},
+   "source": [
+    "The radius of the shockwave is always becoming larger. The initial blast sent the shockwave at a specific velocity which expands with time.\n",
+    "\n",
+    "In this calculation we are looking at the observable data of different specific epochs i.e. measurements at a specific windows of time. Each epoch takes place at a different day after the initial blast and each epoch collects data for a few hours.\n",
+    "\n",
+    "The goal here is to extract the radius from each epoch - independent of time. Only on the basis of the behavior of the spectrum at that time.\n",
+    "\n",
+    "Obviously we expect the radius to change at each different epoch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b7abcf57",
    "metadata": {},
    "source": [
